# HiLens-Lab

./: README.md
HiLens_framework/: Atlas500 使用说明书.MD  CMakeLists.txt  HiLens Framework SDK.MD  README.MD  README_ch.md  build.sh
HiLens_framework/License/: Open Source Software Notice.md
HiLens_framework/common/include/: hilens_errorcode.h  hstring.h  message_mgr.h  sf_common.h  sfw_log.h  utils.h
HiLens_framework/common/include/apigateway/: RequestParams.h  constants.h  hasher.h  header.h  signer.h  utils.h
HiLens_framework/deploy/: decode.graph  encode.graph  infer.graph  install.sh  logger.conf  scc.conf  sfw.conf
HiLens_framework/hda/hdacli/python2/: hdacli_internal.py  hdacli_wrap.cxx  hdacli_wrap.h
HiLens_framework/hda/hdacli/python3/: hdacli_internal.py  hdacli_wrap.cxx
HiLens_framework/hilens_media/include/: HiLensAudioRpc.h  HiLensMedia.h  MediaComm.h  MediaLog.h  MediaUtils.h
HiLens_framework/hilens_security/include/: auth.h  check_license.h  conf.h  device_utils.h  hilens_security.h  vdecoder.h  vencoder.h  wsclient.h
HiLens_framework/hilens_security/lib/: libsc-zlog.so.1.2
HiLens_framework/include/: audio_capture.h  audio_output.h  ei_services.h  errors.h  hilens.h  log.h  media_process.h  model.h  output.h  resource.h  video_capture.h
HiLens_framework/libhilens/: BlockingQueue.h  CMakeLists.txt  VideoCaptureEx.cpp  VideoCaptureEx.h  audio_capture.cpp  audio_output.cpp  audio_play.cpp  audio_play.h  display_hdmi.cpp  display_hdmi.h  dvpp_decoder.cpp  dvpp_decoder.h  dvpp_encoder.cpp  dvpp_encoder.h  ei_services.cpp  ei_utils.cpp  ei_utils.h  encode_src_engine.cpp  encode_src_engine.h  file_audio.cpp  file_audio.h  h264_writer.cpp  h264_writer.h  hiai_common.cpp  hiai_common.h  hilens.cpp  ipc_capture.cpp  ipc_capture.h  license_video_capture.cpp  license_video_capture.h  local_audio.cpp  local_audio.h  local_camera.cpp  local_camera.h  log.cpp  media_process.cpp  model.cpp  model_impl.cpp  model_impl.h  mp4_reader.cpp  (+18 more)
HiLens_framework/libhilens/obszilla/: obsutils.cpp  obsutils.h  obszilla.cpp  obszilla.h  request.cpp  request.h
HiLens_framework/python/: CMakeLists.txt  hilens.i  hilens.py  hilens_internal.py  hilens_wrap.cxx  numpy.i  wrapper.cpp  wrapper.h
contrib/: README.MD
docs/: HiLens 模型支持列表 - ddk893.MD  HiLens 部署 模型转换 算子网络支持清单.xlsx  HiLens常见问题-第1期.MD
docs/pics/: Thumbs.db
official_examples/ModelArts + HiLens 端云协同，开发手势识别AI应用/: README.md  gesture_main.py
official_examples/一键部署AI模型到端侧设备Hilens Kit/: README.md
official_examples/技能模板/Face_Detection_Template/: main.py  postprocess.py
official_examples/技能模板/Face_Landmarks_Detection_Template/: index.py  utils.py
official_examples/技能模板/Face_Landmarks_Detection_Template/models/: landmark68_template_model.om
official_examples/技能模板/Helmet_Detection_Template/: index.py  utils.py
official_examples/技能模板/Single_Human_Pose_Template/: index.py  utils.py
official_examples/技能模板/Static_Gesture_Recognition_Template/: index.py  utils.py
tools/: README.MD
tools/HiLens Kit + ROS/: README.MD  ROS程序编译指导文档.MD  install_rpm.sh
tools/HiLens Kit - yum/: README.MD
tools/HiLens Kit-gdb/: README.MD
